complexify simple model

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -149,7 +149,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "DEBUG = False\n",
+    "DEBUG = True\n",
     "\n",
     "# Device configuration\n",
     "device = torch.device('cpu') if DEBUG else torch.device(\n",
@@ -176,8 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mesedx12\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n"
      ]
     },
     {
@@ -195,43 +194,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>../wandb/run-20241108_202535-3q5gev3u</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/esedx12/secret-runway-detection/runs/3q5gev3u' target=\"_blank\">silvery-tree-43</a></strong> to <a href='https://wandb.ai/esedx12/secret-runway-detection' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/esedx12/secret-runway-detection' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/esedx12/secret-runway-detection/runs/3q5gev3u' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection/runs/3q5gev3u</a>"
+       "W&B syncing is set to <code>`offline`<code> in this directory.  <br/>Run <code>`wandb online`<code> or set <code>WANDB_MODE=online<code> to enable cloud syncing."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -567,8 +530,8 @@
      "output_type": "stream",
      "text": [
       "Backbone parameters: 329\n",
-      "New parameters: 20\n",
-      "Total parameters: 349\n"
+      "New parameters: 52\n",
+      "Total parameters: 381\n"
      ]
     }
    ],
@@ -600,22 +563,31 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9922513"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backbone parameters: 87750176\n",
+      "New parameters: 10315177\n",
+      "Total parameters: 98065353\n"
+     ]
     }
    ],
    "source": [
     "backbone_param_count = sum(p.numel() for p in backbone_params)\n",
     "new_param_count = sum(p.numel() for p in new_params)\n",
     "total_param_count = backbone_param_count + new_param_count\n",
-    "total_param_count\n",
-    "new_param_count"
+    "\n",
+    "wandb.config.update({\n",
+    "    'backbone_param_count': backbone_param_count,\n",
+    "    'new_param_count': new_param_count,\n",
+    "    'total_param_count': total_param_count,\n",
+    "})\n",
+    "\n",
+    "print(\n",
+    "    f\"Backbone parameters: {backbone_param_count}\\n\"\n",
+    "    f\"New parameters: {new_param_count}\\n\"\n",
+    "    f\"Total parameters: {total_param_count}\"\n",
+    ")"
    ]
   },
   {
@@ -641,7 +613,7 @@
     {
      "data": {
       "text/plain": [
-       "'silvery-tree-43'"
+       "'Run from 2024-11-09 09:31:13.330082'"
       ]
      },
      "execution_count": 13,
@@ -663,31 +635,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accuracy method"
+    "### Baseline acc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline Accuracy (all zeros): 0.9978\n"
+      "Baseline Accuracy (all zeros): 0.9960\n"
      ]
     }
    ],
@@ -701,17 +661,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np  # Ensure numpy is imported\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -720,18 +669,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1, Batch 10] Training Loss: 0.8506\n",
-      "[Epoch 1, Batch 20] Training Loss: 0.6880\n",
-      "[Epoch 1, Batch 30] Training Loss: 0.6167\n",
-      "[Epoch 1, Batch 40] Training Loss: 0.5517\n",
-      "[Epoch 1, Batch 50] Training Loss: 0.4791\n"
+      "Epoch 1 Validation Loss: 0.6934\n",
+      "Best Validation Accuracy: 0.9960 at Threshold: 0.60\n",
+      "Validation loss decreased to 0.6934, saving model to ../checkpoints/Run from 2024-11-09 09:31:13.330082.pth\n",
+      "Epoch 2 Validation Loss: 0.7138\n",
+      "Best Validation Accuracy: 0.9960 at Threshold: 1.00\n",
+      "No improvement in validation loss for 1 epoch(s).\n",
+      "Training complete.\n"
      ]
     }
    ],
@@ -858,18 +809,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Run from 2024-11-09 09:31:13.330082'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wandb.run.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Artifact model>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a W&B Artifact for the model\n",
     "artifact = wandb.Artifact('model', type='model')\n",
@@ -883,9 +856,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c80b122fe81a4b12977ba11301aeb3b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.000 MB of 0.000 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>baseline_accuracy</td><td>▁</td></tr><tr><td>best_threshold</td><td>▁█</td></tr><tr><td>epoch</td><td>▁█</td></tr><tr><td>validation_accuracy</td><td>▁▁</td></tr><tr><td>validation_loss</td><td>▁█</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>baseline_accuracy</td><td>0.99603</td></tr><tr><td>best_threshold</td><td>1</td></tr><tr><td>epoch</td><td>2</td></tr><tr><td>validation_accuracy</td><td>0.99603</td></tr><tr><td>validation_loss</td><td>0.71379</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241109_093113-5gj0v1kn<code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>../wandb/offline-run-20241109_093113-5gj0v1kn/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wandb.finish()"
    ]
