--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -212,8 +212,8 @@
     "    'model_type': 'simple',\n",
     "    'num_epochs': 50 if not DEBUG else 2,\n",
     "    'batch_size': 32 if USING_COLAB else 4,\n",
-    "    'lr_head': 0.001,\n",
-    "    'lr_backbone': 0.000001,\n",
+    "    'lr_head': 1e-3,\n",
+    "    'lr_backbone': 1e-5,\n",
     "    'lr_step_size': 10,\n",
     "    'lr_gamma': 0.3,\n",
     "    'early_stopping_patience': 3,\n",
@@ -233,7 +233,9 @@
     "           )\n",
     "\n",
     "if not wandb.run.name:\n",
-    "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\""
+    "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\"\n",
+    "\n",
+    "print(wandb.run.name)"
    ]
   },
   {
