--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,6 @@
     "\n",
     "USING_COLAB = is_colab()\n",
     "\n",
-    "print(os.getcwd())\n",
-    "if USING_COLAB and not os.path.exists('/content/secret-runway-detection'):\n",
-    "    print(\"Cloning the secret-runway-detection repository...\")\n",
-    "    !git clone https://github.com/emilschmitz/secret-runway-detection.git /content/secret-runway-detection\n",
     "\n",
     "if USING_COLAB:\n",
     "    # For running on colab\n",
@@ -102,6 +98,9 @@
     "    drive.mount('/content/drive')\n",
     "    wandb.login(key=userdata.get('WANDB_API_KEY'))\n",
     "\n",
+    "if USING_COLAB and not os.path.exists('/content/secret-runway-detection'):\n",
+    "    print(\"Cloning the secret-runway-detection repository...\")\n",
+    "    !git clone https://github.com/emilschmitz/secret-runway-detection.git /content/secret-runway-detection\n",
     "\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "sys.path.append(os.path.abspath('../GFM'))\n",
@@ -219,6 +218,7 @@
     "    'early_stopping_patience': 3,\n",
     "}\n",
     "\n",
+    "\n",
     "# Initialize wandb\n",
     "wandb.init(project='secret-runway-detection',\n",
     "           mode='online' if not DEBUG else 'dryrun',\n",
@@ -231,6 +231,12 @@
     "           job_type='train',\n",
     "           config=config,\n",
     "           )\n",
+    "\n",
+    "BACKBONE_CFG_PATH = '../configs/gfm_config.yaml'\n",
+    "\n",
+    "# Log the config.yaml file as an artifact\n",
+    "artifact = wandb.Artifact('gfm_config', type='backbone_config')\n",
+    "artifact.add_file(BACKBONE_CFG_PATH)\n",
     "\n",
     "if not wandb.run.name:\n",
     "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\"\n",
@@ -436,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -476,13 +482,11 @@
     "from secret_runway_detection.model import get_model\n",
     "\n",
     "if USING_COLAB:\n",
-    "    # ! ls '/content/drive/MyDrive/Secret Runway Detection Challenge'\n",
     "    ! cp -r '/content/drive/MyDrive/Secret Runway Detection Challenge/simmim_pretrain' '../simmim_pretrain'    \n",
     "\n",
     "backbone_weights_path = '../simmim_pretrain/gfm.pth'\n",
-    "backbone_cfg_path = '../configs/gfm_config.yaml'\n",
     "\n",
-    "model = get_model(config['model_type'], backbone_cfg_path, backbone_weights_path, output_size=config['resolution']).to(device)\n"
+    "model = get_model(config['model_type'], BACKBONE_CFG_PATH, backbone_weights_path, output_size=config['resolution']).to(device)\n"
    ]
   },
   {
@@ -796,10 +800,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 8.1. Find accuracy-optimizing thresholds"
+    "# Log accuracy improvement over baseline\n",
+    "wandb.log({'accuracy_improvement': best_accuracy - baseline_acc})"
    ]
   },
   {
