fix setup logic

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -92,15 +92,15 @@
     "\n",
     "if USING_COLAB:\n",
     "    # For running on colab\n",
-    "    os.chdir('/content/secret-runway-detection/notebooks')\n",
     "    ! pip install -q yacs\n",
     "    from google.colab import drive, userdata\n",
     "    drive.mount('/content/drive')\n",
     "    wandb.login(key=userdata.get('WANDB_API_KEY'))\n",
     "\n",
-    "if USING_COLAB and not os.path.exists('/content/secret-runway-detection'):\n",
-    "    print(\"Cloning the secret-runway-detection repository...\")\n",
-    "    !git clone https://github.com/emilschmitz/secret-runway-detection.git /content/secret-runway-detection\n",
+    "    if not os.path.exists('/content/secret-runway-detection'):\n",
+    "        print(\"Cloning the secret-runway-detection repository...\")\n",
+    "        !git clone https://github.com/emilschmitz/secret-runway-detection.git /content/secret-runway-detection\n",
+    "    os.chdir('/content/secret-runway-detection/notebooks')\n",
     "\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "sys.path.append(os.path.abspath('../GFM'))\n",
