--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -50,15 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not using Colab\n",
-      "/home/emil/Desktop/secret-runway-detection/notebooks\n"
+      "Not using Colab\n"
      ]
     }
    ],
@@ -76,6 +75,7 @@
     "import logging\n",
     "from pathlib import Path\n",
     "import re\n",
+    "import pandas as pd\n",
     "\n",
     "# Function to check if running in Colab\n",
     "def is_colab():\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,9 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "# Debug flag: Set to True to run on CPU, False to use GPU if available\n",
-    "# With DEBUG == True, test and train sets are reduced to 10 samples each\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "DEBUG = True\n",
+    "DEBUG = False\n",
+    "if USING_COLAB:\n",
+    "    DEBUG = False\n",
     "\n",
     "# Device configuration\n",
     "device = torch.device('cpu') if DEBUG else torch.device(\n",
@@ -172,13 +168,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "Tracking run with wandb version 0.18.3"
@@ -193,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "W&B syncing is set to <code>`offline`<code> in this directory.  <br/>Run <code>`wandb online`<code> or set <code>WANDB_MODE=online<code> to enable cloud syncing."
+       "Run data is saved locally in <code>../wandb/run-20241109_162456-411t9vr9</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -201,6 +190,49 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/esedx12/secret-runway-detection/runs/411t9vr9' target=\"_blank\">lucky-elevator-53</a></strong> to <a href='https://wandb.ai/esedx12/secret-runway-detection' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/esedx12/secret-runway-detection' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/esedx12/secret-runway-detection/runs/411t9vr9' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection/runs/411t9vr9</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lucky-elevator-53\n"
+     ]
     }
    ],
    "source": [
@@ -232,16 +264,37 @@
     "           config=config,\n",
     "           )\n",
     "\n",
-    "BACKBONE_CFG_PATH = '../configs/gfm_config.yaml'\n",
     "\n",
-    "# Log the config.yaml file as an artifact\n",
-    "artifact = wandb.Artifact('gfm_config', type='backbone_config')\n",
-    "artifact.add_file(BACKBONE_CFG_PATH)\n",
     "\n",
     "if not wandb.run.name:\n",
     "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\"\n",
     "\n",
     "print(wandb.run.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Artifact gfm_config>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BACKBONE_CFG_PATH = '../configs/gfm_config.yaml'\n",
+    "\n",
+    "# Log the config.yaml file as an artifact\n",
+    "artifact_gfm_cfg = wandb.Artifact('gfm_config', type='backbone_config')\n",
+    "artifact_gfm_cfg.add_file(BACKBONE_CFG_PATH)\n",
+    "wandb.log_artifact(artifact_gfm_cfg)"
    ]
   },
   {
@@ -253,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,20 +340,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total files: 1637\n",
-      "Total strips: 113\n",
-      "Training files: 1305\n",
-      "Testing files: 332\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "images_dir = train_dir / 'images'\n",
@@ -421,21 +463,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: yacs in /home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages (0.1.8)\n",
-      "Requirement already satisfied: PyYAML in /home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages (from yacs) (6.0.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install yacs"
    ]
@@ -444,40 +474,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=> merge config from ../configs/gfm_config.yaml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/torch/functional.py:513: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3609.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Loading pretrained weights...\n",
-      "\n",
-      "Missing keys when loading pretrained weights:\n",
-      "  - head.weight\n",
-      "  - head.bias\n",
-      "\n",
-      "Unexpected keys when loading pretrained weights:\n",
-      "  - mask_token\n",
-      "\n",
-      "Pretrained weights loaded with some missing/unexpected keys.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from secret_runway_detection.model import get_model\n",
     "\n",
@@ -491,18 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "backbone: SwinTransformer\n",
-      "segmentation_head: SimpleSegmentationHead\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, module in model.named_children():\n",
     "    print(f\"{name}: {module.__class__.__name__}\")"
@@ -517,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,19 +516,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Backbone parameters: 329\n",
-      "New parameters: 52\n",
-      "Total parameters: 381\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Separate parameters for different learning rates\n",
     "backbone_params = []\n",
@@ -565,19 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Backbone parameters: 87750176\n",
-      "New parameters: 10315177\n",
-      "Total parameters: 98065353\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "backbone_param_count = sum(p.numel() for p in backbone_params)\n",
     "new_param_count = sum(p.numel() for p in new_params)\n",
@@ -598,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,20 +581,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Run from 2024-11-09 09:31:13.330082'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a 'checkpoints' directory within the current directory\n",
     "os.makedirs('../checkpoints', exist_ok=True)\n",
@@ -646,17 +603,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline Accuracy (all zeros): 0.9960\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assuming you have a DataLoader named val_dataloader\n",
     "baseline_acc = compute_baseline_accuracy(val_dataloader)\n",
@@ -675,23 +624,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 Validation Loss: 0.6934\n",
-      "Best Validation Accuracy: 0.9960 at Threshold: 0.60\n",
-      "Validation loss decreased to 0.6934, saving model to ../checkpoints/Run from 2024-11-09 09:31:13.330082.pth\n",
-      "Epoch 2 Validation Loss: 0.7138\n",
-      "Best Validation Accuracy: 0.9960 at Threshold: 1.00\n",
-      "No improvement in validation loss for 1 epoch(s).\n",
-      "Training complete.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize early stopping variables before the training loop\n",
     "best_val_loss = float('inf')\n",
@@ -818,40 +753,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Run from 2024-11-09 09:31:13.330082'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.run.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Artifact model>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a W&B Artifact for the model\n",
     "artifact = wandb.Artifact('model', type='model')\n",
@@ -865,18 +778,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c80b122fe81a4b12977ba11301aeb3b9",
+       "model_id": "0110e8270e0642a88ec4a0bf7be06af3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='0.000 MB of 0.000 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+       "VBox(children=(Label(value='0.005 MB of 0.005 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
       ]
      },
      "metadata": {},
@@ -885,12 +798,7 @@
     {
      "data": {
       "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>baseline_accuracy</td><td>▁</td></tr><tr><td>best_threshold</td><td>▁█</td></tr><tr><td>epoch</td><td>▁█</td></tr><tr><td>validation_accuracy</td><td>▁▁</td></tr><tr><td>validation_loss</td><td>▁█</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>baseline_accuracy</td><td>0.99603</td></tr><tr><td>best_threshold</td><td>1</td></tr><tr><td>epoch</td><td>2</td></tr><tr><td>validation_accuracy</td><td>0.99603</td></tr><tr><td>validation_loss</td><td>0.71379</td></tr></table><br/></div></div>"
+       " View run <strong style=\"color:#cdcd00\">lucky-elevator-53</strong> at: <a href='https://wandb.ai/esedx12/secret-runway-detection/runs/411t9vr9' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection/runs/411t9vr9</a><br/> View project at: <a href='https://wandb.ai/esedx12/secret-runway-detection' target=\"_blank\">https://wandb.ai/esedx12/secret-runway-detection</a><br/>Synced 5 W&B file(s), 0 media file(s), 2 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -902,19 +810,7 @@
     {
      "data": {
       "text/html": [
-       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241109_093113-5gj0v1kn<code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>../wandb/offline-run-20241109_093113-5gj0v1kn/logs</code>"
+       "Find logs at: <code>../wandb/run-20241109_162456-411t9vr9/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -930,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
