--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -240,7 +240,7 @@
     "    'training_dataset': 'point',\n",
     "    'resolution': 192,\n",
     "    'train_percentage': 0.8,\n",
-    "    'model_type': 'simple',\n",
+    "    'model_type': 'upernet',\n",
     "    'num_epochs': 50 if not DEBUG else 2,\n",
     "    'batch_size': 32 if USING_COLAB else 4,\n",
     "    'lr_head': 1e-3,\n",
