--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -62,6 +62,23 @@
     }
    ],
    "source": [
+    "# Function to check if running in Colab\n",
+    "def is_colab():\n",
+    "    try:\n",
+    "        import google.colab\n",
+    "        print(\"Using Colab\")\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        print(\"Not using Colab\")\n",
+    "        return False\n",
+    "\n",
+    "USING_COLAB = is_colab()\n",
+    "\n",
+    "if USING_COLAB:\n",
+    "    # For running on colab\n",
+    "    from google.colab import drive, userdata\n",
+    "    drive.mount('/content/drive')\n",
+    "\n",
     "import sys\n",
     "import os\n",
     "import random\n",
@@ -77,23 +94,8 @@
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "# Function to check if running in Colab\n",
-    "def is_colab():\n",
-    "    try:\n",
-    "        import google.colab\n",
-    "        print(\"Using Colab\")\n",
-    "        return True\n",
-    "    except ImportError:\n",
-    "        print(\"Not using Colab\")\n",
-    "        return False\n",
-    "\n",
-    "USING_COLAB = is_colab()\n",
-    "\n",
     "\n",
     "if USING_COLAB:\n",
-    "    # For running on colab\n",
-    "    from google.colab import drive, userdata\n",
-    "    drive.mount('/content/drive')\n",
     "    wandb.login(key=userdata.get('WANDB_API_KEY'))\n",
     "    ! pip install -q yacs\n",
     "\n",
