--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -451,9 +451,9 @@
     "    val_dataset.samples = val_dataset.samples[:10]\n",
     "\n",
     "train_dataloader = DataLoader(\n",
-    "    train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
+    "    train_dataset, batch_size=config['batch_size'], shuffle=True, drop_last=True)\n",
     "val_dataloader = DataLoader(\n",
-    "    val_dataset, batch_size=config['batch_size'], shuffle=False)"
+    "    val_dataset, batch_size=config['batch_size'], shuffle=False, drop_last=False)"
    ]
   },
   {
