add simple custom segmentation model and update loss function to use class weights

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -594,13 +594,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define loss function and optimizer\n",
-    "# Suitable for binary classification with logits\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "class_weights = train_dataset.class_weights\n",
+    "\n",
+    "# In your training loop, use the weights with BCEWithLogitsLoss\n",
+    "criterion = nn.BCEWithLogitsLoss(\n",
+    "    pos_weight=class_weights[1]  # Only need positive class weight for binary case\n",
+    ")\n",
     "\n",
     "# Optionally, define a learning rate scheduler\n",
     "scheduler = optim.lr_scheduler.StepLR(\n",
